:iphone: Fix ui on mobile

--- a/src/LeaderBoard.module.scss
+++ b/src/LeaderBoard.module.scss
@@ -309,7 +309,7 @@
     .scoreValue,
     .scoreIndex {
         width: 40px;
-        margin-right: 30px;
+        margin-right: 50px;
     }
 
     .invitedValue,
